--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -111,7 +111,7 @@ Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de 
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Respuestas</p>
-                    <p>En el presente documento adjuntado se apreciara la encuesta realizada a 21 personas en la localidad de Arequipa en esta muestra las respuestas que tuvieron sobre cada pregutna realizada, la cual fueron 12 preguntas.</p>
+                    <p>En el presente documento adjuntado se apreciara la encuesta realizada a 21 personas en la localidad de Arequipa.En este documento, se muestra las respuestas a la encuesta.</p>
                     <a href="https://drive.google.com/open?id=1PPBZmRs6tusLJgVFBGZ1mXamneTRx6PH" "https://drive.google.com/open?id=1glFo-rg0gW3ZbkqYlWxVqp2_aPFV_mHd" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
                 </div>
                 <div class="think__details__extra">
