--- a/finalProject.html
+++ b/finalProject.html
@@ -32,7 +32,7 @@
              </li>
             <li><a href="finalProject.html">Proyecto de Fabricacion Digital</a>
                 <ul>
-                    <li><a href="proyecto-final/semana1.html">Desarrollo de la pagina web</a></li>
+                    <li><a href="proyecto-final/Laboratorio 1.html">Desarrollo de la pagina web</a></li>
                     <li><a href="proyecto-final/semana2.html">Desarrollo del Diseño</a></li>
                     <li><a href="proyecto-final/semana3.html">Ejecucion del Proyecto</a></li>
                     <li><a href="proyecto-final/semana4.html">Presentacion Parte 1</a></li>
