--- a/proyecto-final/Laboratorio 2.html
+++ b/proyecto-final/Laboratorio 2.html
@@ -32,12 +32,12 @@
                  </li>
                 <li><a href="../finalProject.html">Proyecto Final</a>
                     <ul>
-                        <li><a href="semana1.html">Desarrollo de la Pagina Web</a></li>
-                        <li><a href="semana2.html">Desarrollo del Diseño</a></li>
-                        <li><a href="semana3.html">Ejecucion del Proyecto</a></li>
-                        <li><a href="semana4.html">Presentacion Parte 1</a></li>
-                        <li><a href="semana5.html">Presentacion Final</a></li>
-                        <li><a href="semana6.html">Feria de Proyecto</a></li>
+                        <li><a href="Laboratorio 1.html">Desarrollo de la Pagina Web</a></li>
+                        <li><a href="Laboratorio 2.html">Desarrollo del Diseño</a></li>
+                        <li><a href="Laboratorio 3.html">Ejecucion del Proyecto</a></li>
+                        <li><a href="Laboratorio 4.html">Presentacion Parte 1</a></li>
+                        <li><a href="Laboratorio 5.html">Presentacion Final</a></li>
+                        <li><a href="Laboratorio 6.html">Feria de Proyecto</a></li>
                     </ul>
                 </li>
             </ul>
