--- a/finalProject.html
+++ b/finalProject.html
@@ -56,7 +56,7 @@
                     <i class="icon-pen-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana1.html" class="projectsFinal__week__details__week">Semana 1 -Desarrollo de la Pagina Web</a>
+                    <a href="proyecto-final/semana1.html" class="projectsFinal__week__details__week">Laboratorio 1 -Desarrollo de la Pagina Web</a>
                     <p class="projectsFinal__week__details__description">Limite de Entrega: 28 de Febrero , hasta las 10:15</p>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana2.html" class="projectsFinal__week__details__week">Semana 2 -Desarrollo del Diseño</a>
+                    <a href="proyecto-final/semana2.html" class="projectsFinal__week__details__week">Laboratorio 2 -Desarrollo del Diseño</a>
                     <p class="projectsFinal__week__details__description">Limite de Entrega: 14 de Marzo , hasta las 10:15.</p>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana3.html" class="projectsFinal__week__details__week">Semana 3 - Ejecucion del Proyecto</a>
+                    <a href="proyecto-final/semana3.html" class="projectsFinal__week__details__week">Laboratorio 3 - Ejecucion del Proyecto</a>
                     <p class="projectsFinal__week__details__description">Limite de Entrega: 28 de Marzo , hasta las 10:15.</p>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     <i class="icon-settings-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana4.html" class="projectsFinal__week__details__week">Semana 4 - Presentacion Parte 1</a>
+                    <a href="proyecto-final/semana4.html" class="projectsFinal__week__details__week">Laboratorio 4 - Presentacion Parte 1</a>
                     <p class="projectsFinal__week__details__description">Limite de Entrega: 11 de Abril , hasta las 10:15.</p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana5.html" class="projectsFinal__week__details__week">Semana 5 - Presentacion Final</a>
+                    <a href="proyecto-final/semana5.html" class="projectsFinal__week__details__week">Laboratorio 5 - Presentacion Final</a>
                     <p class="projectsFinal__week__details__description">Limite de Entrega: 25 de Abril , hasta las 10:15</p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                     <i class="icon-receipt-shopping-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Semana 6 - Feria de Proyecto</a>
+                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Laboratorio 6 - Feria de Proyecto</a>
                     <p class="projectsFinal__week__details__description">Limite de Entrega: 9 de Mayo , hasta las 10:15</p>
                 </div>
             </div>
