--- a/proyecto-final/project.html
+++ b/proyecto-final/project.html
@@ -24,12 +24,12 @@
             </li>
             <li><a href="../finalProject.html">Proyecto Final</a>
                 <ul>
-                    <li><a href="#">Semana 1</a></li>
-                    <li><a href="#">Semana 2</a></li>
-                    <li><a href="#">Semana 3</a></li>
-                    <li><a href="#">Semana 4</a></li>
-                    <li><a href="#">Semana 5</a></li>
-                    <li><a href="#">Semana 6</a></li>
+                    <li><a href="#">Laboratorio 1</a></li>
+                    <li><a href="#">Laboratorio 2</a></li>
+                    <li><a href="#">Laboratorio 3</a></li>
+                    <li><a href="#">Laboratorio 4</a></li>
+                    <li><a href="#">Laboratorio 5</a></li>
+                    <li><a href="#">Laboratorio 6</a></li>
                 </ul>
             </li>
         </ul>
