--- a/proyecto-final/project.html
+++ b/proyecto-final/project.html
@@ -24,7 +24,7 @@
             </li>
             <li><a href="../finalProject.html">Proyecto Final</a>
                 <ul>
-                    <li><a href="#">Laboratorio 1</a></li>
+                    <li><a href="#">semana 1</a></li>
                     <li><a href="#">Laboratorio 2</a></li>
                     <li><a href="#">Laboratorio 3</a></li>
                     <li><a href="#">Laboratorio 4</a></li>
