--- a/proyecto-final/semana 1.html
+++ b/proyecto-final/semana 1.html
@@ -31,12 +31,12 @@
                  </li>
                 <li><a href="../finalProject.html">Proyecto de Fabricacion Digital</a>
                     <ul>
-                        <li><a href="Laboratorio 1.html">Semana 1</a></li>
-                        <li><a href="Laboratorio 2.html">Semana 2</a></li>
-                        <li><a href="Laboratorio 3.html">Semana 3</a></li>
-                        <li><a href="Laboratorio 4.html">Semana 4</a></li>
-                        <li><a href="Laboratorio 5.html">Semana 5</a></li>
-                        <li><a href="Laboratorio 6.html">Semana 6</a></li>
+                        <li><a href="semana1.html">Semana 1</a></li>
+                        <li><a href="semana2.html">Semana 2</a></li>
+                        <li><a href="semana3.html">Semana 3</a></li>
+                        <li><a href="semana4.html">Semana 4</a></li>
+                        <li><a href="semana5.html">Semana 5</a></li>
+                        <li><a href="semana6.html">Semana 6</a></li>
                     </ul>
                 </li>
             </ul>
