--- a/en/finalProject.html
+++ b/en/finalProject.html
@@ -56,7 +56,7 @@
                     <i class="icon-pen-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana1.html" class="projectsFinal__week__details__week">Week 1 - Development of the Website</a>
+                    <a href="final-project/semana1.html" class="projectsFinal__week__details__week">Laboratory 1 - Development of the Website</a>
                     <p class="projectsFinal__week__details__description">Delivery Limit: February 28, until 10:15.</p>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana2.html" class="projectsFinal__week__details__week">Week 2 - Development of Design</a>
+                    <a href="final-project/semana2.html" class="projectsFinal__week__details__week">Laboratory 2 - Development of Design</a>
                     <p class="projectsFinal__week__details__description">Delivery Limit: March 14, until 10:15</p>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana3.html" class="projectsFinal__week__details__week">Week 3 - Project execution</a>
+                    <a href="final-project/semana3.html" class="projectsFinal__week__details__week">Laboratory 3 - Project execution</a>
                     <p class="projectsFinal__week__details__description"> Delivery Limit: March 28, until 10:15.</p>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     <i class="icon-settings-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana4.html" class="projectsFinal__week__details__week">Week 4 - Presentation Part 1</a>
+                    <a href="final-project/semana4.html" class="projectsFinal__week__details__week">Laboratory 4 - Presentation Part 1</a>
                     <p class="projectsFinal__week__details__description">Delivery Limit: April 11, until 10:15</p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana5.html" class="projectsFinal__week__details__week">Week 5 - Final presentation</a>
+                    <a href="final-project/semana5.html" class="projectsFinal__week__details__week">Laboratory 5 - Final presentation</a>
                     <p class="projectsFinal__week__details__description">Delivery Limit: April 25, until 10:15</p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                     <i class="icon-receipt-shopping-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Week 6 - Project Fair</a>
+                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Laboratory 6 - Project Fair</a>
                     <p class="projectsFinal__week__details__description">Delivery Limit: May 9, until 10:15.</p>
                 </div>
             </div>
