--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -22,11 +22,12 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../design.html">Design Thinking</a>
                     <ul>
-                        <li><a href="../design-thinking/practica1.html">Práctica 1</a></li>
-                        <li><a href="../design-thinking/practica2.html">Práctica 2</a></li>
-                        <li><a href="../design-thinking/practica3.html">Práctica 3</a></li>
-                        <li><a href="../design-thinking/practica4.html">Práctica 4</a></li>
-                        <li><a href="../design-thinking/practica5.html">Práctica 5</a></li>
+                       <li><a href="../design-thinking/practica1.html">Diseño de Pagina Web y Planteamienton del Proyecto de Desing Thinking</a></li>
+                        <li><a href="../design-thinking/practica2.html">Taller de Desing Thinking</a></li>
+                        <li><a href="../design-thinking/practica3.html">Empatizar</a></li>
+                        <li><a href="../design-thinking/practica4.html">Definir</a></li>
+                        <li><a href="../design-thinking/practica5.html">Idear</a></li>
+			<li><a href="../design-thinking/practica5.html">Prototipar y Testear</a></li>
                     </ul>
                  </li>
                 <li><a href="../finalProject.html">Proyecto de Fabricacion Digital</a>
