--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -32,12 +32,12 @@
                  </li>
                 <li><a href="../finalProject.html">Proyecto de Fabricacion Digital</a>
                     <ul>
-                        <li><a href="semana1.html">Semana 1</a></li>
-                        <li><a href="semana2.html">Semana 2</a></li>
-                        <li><a href="semana3.html">Semana 3</a></li>
-                        <li><a href="semana4.html">Semana 4</a></li>
-                        <li><a href="semana5.html">Semana 5</a></li>
-                        <li><a href="semana6.html">Semana 6</a></li>
+                        <li><a href="semana1.html">Desarrollo de la Pagina Web</a></li>
+                        <li><a href="semana2.html">Desarrollo del Diseño</a></li>
+                        <li><a href="semana3.html">Ejecucion del Proyecto</a></li>
+                        <li><a href="semana4.html">Presentacion Parte 1</a></li>
+                        <li><a href="semana5.html">Presentacion Final</a></li>
+                        <li><a href="semana6.html">Feria de Proyecto</a></li>
                     </ul>
                 </li>
             </ul>
