--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -32,12 +32,12 @@
              </li>
             <li><a href="../finalProject.html">Proyecto de Fabricacion Digital</a>
                 <ul>
-                    <li><a href="../proyecto-final/semana1.html">Semana 1</a></li>
-                    <li><a href="../proyecto-final/semana2.html">Semana 2</a></li>
-                    <li><a href="../proyecto-final/semana3.html">Semana 3</a></li>
-                    <li><a href="../proyecto-final/semana4.html">Semana 4</a></li>
-                    <li><a href="../proyecto-final/semana5.html">Semana 5</a></li>
-                    <li><a href="../proyecto-final/semana6.html">Semana 6</a></li>
+                    <li><a href="../proyecto-final/semana1.html">Desarrollo de la página web</a></li>
+                    <li><a href="../proyecto-final/semana2.html">Desarrollo del diseño</a></li>
+                    <li><a href="../proyecto-final/semana3.html">Ejecución del proyecto</a></li>
+                    <li><a href="../proyecto-final/semana4.html">Presentación parte 1</a></li>
+                    <li><a href="../proyecto-final/semana5.html">Presentación final</a></li>
+                    <li><a href="../proyecto-final/semana6.html">feria del proyecto</a></li>
                 </ul>
             </li>
 		    </ul>
