--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<li><a href="index.html">Inicio</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Gestión de Proyectos</a></li>
+                    <li><a href="design-thinking/practica1.html">Gestión de Proyectos y Planteamiento del problema</a></li>
                     <li><a href="design-thinking/practica2.html">Taller de Design Thinking</a></li>
                     <li><a href="design-thinking/practica3.html">Empatizar</a></li>
                     <li><a href="design-thinking/practica4.html">Definir</a></li>
