--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -22,12 +22,12 @@
 			<li><a href="../index.html">Inicio</a></li>
       <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                  <li><a href="design-thinking/practica1.html">Diseño de página web y Planteamiento del Proyecto de Design Thinking</a></li>
-                  <li><a href="design-thinking/practica2.html">Taller de Design Thinking</a></li>
-                  <li><a href="design-thinking/practica3.html">Empatizar</a></li>
-                  <li><a href="design-thinking/practica4.html">Definir.</a></li>
-                  <li><a href="design-thinking/practica5.html">Idear.</a></li>
-<li><a href="design-thinking/practica6.html">Prototipar y Testear..</a></li>
+                   <li><a href="../design-thinking/practica1.html">Diseño de Pagina Web y Planteamienton del Proyecto de Desing Thinking</a></li>
+                        <li><a href="../design-thinking/practica2.html">Taller de Desing Thinking</a></li>
+                        <li><a href="../design-thinking/practica3.html">Empatizar</a></li>
+                        <li><a href="../design-thinking/practica4.html">Definir</a></li>
+                        <li><a href="../design-thinking/practica5.html">Idear</a></li>
+			<li><a href="../design-thinking/practica5.html">Prototipar y Testear</a></li>
                 </ul>
              </li>
             <li><a href="../finalProject.html">Proyecto de Fabricacion Digital</a>
