--- a/proyecto-final/semana3.html
+++ b/proyecto-final/semana3.html
@@ -46,7 +46,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Semana 3</h1>
+                <h1>Laboratorio 3</h1>
             </div>
             <!-- <div class="think__title__content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
@@ -62,15 +62,20 @@
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Diseños 2D y 3D</p>
-                    <p class="think__details__info__cont">Es necesario realizar un prototipo antes de montarlo en la parte físico por ello de herramientas tales como Autocad ,rhinoceros ,frizz nos ayudaron a realizar un montaje virtual tanto de las conexiones del circuito que se desarrolló en el bosquejo así como el funcionamiento correcto y posibles mejoras.</p>
+                    <p class="think__details__info__title">Uso de la maquina y Configuracion</p>
+                    <p class="think__details__info__cont">Para poder nosotros proseguir a cortar las partes de nuestro proyecto , pues devemos tener el conocimiento necesario de la manera a configurar el corte en nuestro Rhinoceros , ademas de saber utilizar la maquina atraves del interfaz . </p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Documento - Diagrama  2D y 3D</p>
-                    <p>El presente documento muestra los gráficos de manera bidimensional del proyecto el cual consta de un sistema de seguridad para lo cual hemos utilizado la herramienta “FZZ” como medio para demostrar la implementación.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/11rheWf4l_ERvf0U8q5jPEm75jaxn6xG_/view?usp=sharing" target="_blank">Documento - Diagrama 2D y 3D</a></div>
-                </div>
+                    <p class="think__details__extra__title">Documento de Rhinoceros - configurado</p>
+                    <p>El presente documento muestra los Rhinoceros de cada pieza ya configurada de acuerdo a la maquina y grosor de la madera.</p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1YYVbJJa7eyDWcF-G9SJB3HB6EcgkAXZZ/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°1</a></div>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1qqOtj1Cbow67dzjX91gapKsPtU2CWmS6/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°2</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1mjRnIzf-bUwQthU2vzi1MTqXlrnmACzZ/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°3</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1ybxwfrO4NALzxiKFjoPYamFq2oDQTYLb/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°4</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1eDeXC9sa75OPgC1U-MIe5BMlvLwe34KC/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°5</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1fCSaWPdn3_2n9U8EbDuvmGx6ryWaB7Vw/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°6</a></div>
+		</div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Archivos - Diagrama  2D y 3D</p>
                     <p class="think__details__extra__description">El presente documento contiene el archivo bidimensional en donde se realizó el diagrama correspondiente el cual refleja la implementación final del proyecto implementación de un sistema de seguridad .</p>
