--- a/proyecto-final/semana3.html
+++ b/proyecto-final/semana3.html
@@ -46,11 +46,17 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Laboratorio 3</h1>
+                <h1>Ejecucion del Proyecto</h1>
             </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+            <div class="think__title__content">
+                <p>En esta seccion de mostrada todo el proceso que se realizo para poder llegar a armar nuestro mueble, un tutorial de la manera de uso, los documentos obtenidos</p>
+                
+	    </div>
+        </div>
+
+        <div class="think">
+            <div class="think__img">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CDKK_EdKiP4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
         <div class="think">
