--- a/proyecto-final/semana3.html
+++ b/proyecto-final/semana3.html
@@ -77,10 +77,25 @@
 		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1fCSaWPdn3_2n9U8EbDuvmGx6ryWaB7Vw/view?usp=sharing" target="_blank">Rhinoceros - Pieza N°6</a></div>
 		</div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Archivos - Diagrama  2D y 3D</p>
-                    <p class="think__details__extra__description">El presente documento contiene el archivo bidimensional en donde se realizó el diagrama correspondiente el cual refleja la implementación final del proyecto implementación de un sistema de seguridad .</p>
-                    <a href="https://drive.google.com/drive/folders/1p4fRTwta_wBYXIyBpUkWmHSEy8_nh5m0?usp=sharing" target="_blank">Archivos - Diagrama 2D y 3D</a>
+                    <p class="think__details__extra__title">Documento JG de cada pieza</p>
+                    <p class="think__details__extra__description">Aqui se presentan los JG de cada pieza, la convercion de los rhinoceros</p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1lF8meYgqy2lb_16SYhkro-JlFlx3frTw/view?usp=sharing" target="_blank">JG - Pieza N°1</a></div>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1xK42YokpR7uLmNiMTGZ152t8GiMTqiu8/view?usp=sharing" target="_blank">JG - Pieza N°2</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1c5PRaKJ4vfWZfCfGLjrtI70EkgIVNV15/view?usp=sharing" target="_blank">JG - Pieza N°3</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1_Dmvl_6QI_rBuWwpdhExQ6hAWA1dh9kA/view?usp=sharing" target="_blank">JG - Pieza N°4</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/16PrYouSFNTLprlHQODzh_qlI5Oz_oOvg/view?usp=sharing" target="_blank">JG - Pieza N°5</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1kDR4y3mTTNZxsV_HsgvJMnH_3YjWO3eQ/view?usp=sharing" target="_blank">JG - Pieza N°6</a></div>
                 </div>
+                <div class="think__details__extra">
+                    <p class="think__details__extra__title">Archivo NC</p>
+                    <p class="think__details__extra__description">Aqui se genera un archivo NC , en cual lo guardaremos en el ordenador o donde se vea conveniendo, teniendo en cuenta que los parametros del eje X-Y sean los establecidos por la maquina</p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1L29VbIpr65izDgkRqAkrmI7TEx8w8Ql9/view?usp=sharing" target="_blank">Archivo NC - Pieza N°1</a></div>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1ZwESiYdbJMfkRDp1qpmtJID0uj_3fhPt/view?usp=sharing" target="_blank">Archivo NC - Pieza N°2</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/15qJO3B2_PC4jbVZQPtqqgjGVH8jfCqSs/view?usp=sharing" target="_blank">Archivo NC - Pieza N°3</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1zZQAmaW87ga2PVRBMUGnPlPO9P1jdHne/view?usp=sharing" target="_blank">Archivo NC - Pieza N°4</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1VTsjbaNNJyx0cNSukvoK-fHgHrXrNSCG/view?usp=sharing" target="_blank">Archivo NC - Pieza N°5</a></div>
+		    <div class="think__details__extra__description"><a href="https://drive.google.com/file/d/1d0ic6ZHhdHoEeEWqD_JNI0Ot4c7Y07ww/view?usp=sharing" target="_blank">Archivo NC - Pieza N°6</a></div>
+		</div>
             </div>
         </div>
     </div>
@@ -92,7 +107,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2017 - Diseñado por: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
                 </div>
             </div>
         </footer>
