--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -119,6 +119,10 @@ Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de 
                     <p>En el presente documento adjuntado muestra la estadistica de la encuesta realizada a 21 personas.</p>
                     <a href="https://drive.google.com/open?id=1T0NuiWtuzA7nCLUvXf3XMJ-UUZeOql-7" target="_blank" class="think__details__extra__description">Prototipo</a>
                 </div>
+		<div class="think__details__extra">
+                    <p class="think__details__extra__title">Benchmarking</p>
+                    <p>En el presente documento se adjunta el Benchmarking que usaremos en nuestro producto.</p>
+                    <a href="https://drive.google.com/file/d/1LKMdLkGaMv2w6sg9G0QBqHhgtjtxEQfa/view?usp=sharing">Descargar</a>
             </div>
         </div>
     </div>
