--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -117,7 +117,7 @@ Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Estadística de la encuesta</p>
                     <p>En el presente documento adjuntado muestra la estadistica de la encuesta realizada a 21 personas.</p>
-                    <a href="https://drive.google.com/open?id=1T0NuiWtuzA7nCLUvXf3XMJ-UUZeOql-7" target="_blank" class="think__details__extra__description">Prototipo</a>
+                    <a href="https://drive.google.com/open?id=1T0NuiWtuzA7nCLUvXf3XMJ-UUZeOql-7" target="_blank" class="think__details__extra__description">Descargar</a>
                 </div>
 		<div class="think__details__extra">
                     <p class="think__details__extra__title">Benchmarking</p>
