--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -114,6 +114,11 @@ Es nuestra filosofía sostenible, la que nos ha hecho ser miembros de la Red de 
                     <p>En el presente documento adjuntado se apreciara la encuesta realizada a 21 personas en la localidad de Arequipa.En este documento, se muestra las respuestas a la encuesta.</p>
                     <a href="https://drive.google.com/open?id=1PPBZmRs6tusLJgVFBGZ1mXamneTRx6PH" "https://drive.google.com/open?id=1glFo-rg0gW3ZbkqYlWxVqp2_aPFV_mHd" class="think__details__extra__description"  target="_blank">Documento - Respuestas</a>
                 </div>
+		<div class="think__details__extra">
+                    <p class="think__details__extra__title">Respuestas del Ingeniero</p>
+                    <p>En el presente documento adjuntado se presenta las respuestas que fueron realizadas al ingeniero Anthony Alvarez Bedregal</p>
+                    <a href="https://drive.google.com/file/d/1q-VQ_D1xTSgfNs4c7HPeeCIfNXlCl0dA/view?usp=sharing" target="_blank" class="think__details__extra__description">Respuestas a las preguntas  realizadas</a>
+                </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Estadística de la encuesta</p>
                     <p>En el presente documento adjuntado muestra la estadistica de la encuesta realizada a 21 personas.</p>
