--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -46,7 +46,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Empatizar</h1>
+                <h1>Definir</h1>
             </div>
             <div class="think__title__content">
                 <p>En este documento , se presentara informacion sobre empresas peruanas y extranjeras productoras de muebles plegables , ademas de una entrevista a un especialista en ingeneria civil que nos brindara su opinion y consejos para este proyecto</p>
