--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -46,7 +46,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Semana 4</h1>
+                <h1>Presentacion Parte 1</h1>
             </div>
             <!-- <div class="think__title__content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
@@ -64,16 +64,10 @@
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Implementacion y Funcionamiento al 50%</p>
-                    <p class="think__details__info__cont">En este documento se encontrará el montaje del circuito ya ensamblado de forma física basándonos en el prototipo realizo con anterioridad, así como también el funcionamiento óptimo del servicio de la cámara y de la aplicación realizada para ella.</p>
-                </div>
-
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Documento - Implementación al 50%</p>
-                    <p class="think__details__extra__description">Basándonos en el diagrama de Gant ,y correspondiente a dicha semana en esta parte el proyecto del Sistema de seguridad desde una aplicación móvil se comenzó a montar las conexiones según el diagrama realizado con anterioridad así como también desarrollar el código en arduino para enviar los pulsos al servomotor. Por otro lado, la conexión de la cámara se realizó por medio del lenguaje de programación en js.</p>
-                    <a href="https://drive.google.com/file/d/1Fr3yzB_1fZSvpqip6UBm-l1IyFxge0_C/view?usp=sharing" target="_blank">Documento - Implementación al 50%</a>
-                </div>
-                
+                    <p class="think__details__info__title">Manual de Instrucciones</p>
+                    <p class="think__details__info__cont">En el siguiente PDF, se presenta la manera correcta del uso de este producto, los materiales que esta posee , los equipos utilizados para poder armas este muebles ademas del procedimiento que se realiza reprentado por fotos . Tambien se va a poder observar las precauciones que se deve tener para el correcto uso </p>
+                    <a href="https://drive.google.com/file/d/1gPX4kw1Ph-zxjq6SOKlzjHsYo2WIzwb3/view?usp=sharing" target="_blank">PDF- Manual de Instrucciones</a>
+		</div> 
             </div>
         </div>
     </div>
@@ -85,7 +79,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2017 - Diseñado por: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
                 </div>
             </div>
         </footer>
