--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -49,8 +49,8 @@
                 <h1>Definir</h1>
             </div>
             <div class="think__title__content">
-                <p>En este documento , se presentara informacion sobre empresas peruanas y extranjeras productoras de muebles plegables , ademas de una entrevista a un especialista en ingeneria civil que nos brindara su opinion y consejos para este proyecto</p>
-                <p> Tambien se puede documentar una encuesta realizada a personas sobre la realidad de su vivir , presentando pruebas fisicas y virtuales de esta</p>
+                <p>En este punto, ahora toca analizar y resumir la información obtenida en el punto anterior.</p>
+                <p> Luego de conocer las dificultades y problemas de los usuarios se paso a realiar la siguiente etapa, que consta de evluar toda la informacion evaluada de la etapa anterior</p>
 	    </div>
         </div>
 
