--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -48,9 +48,11 @@
             <div class="think__title__text">
                 <h1>Presentacion Parte 1</h1>
             </div>
-            <!-- <div class="think__title__content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore officiis deleniti temporibus, recusandae et perferendis libero, eos quidem, maiores labore blanditiis laboriosam tempora architecto eaque velit consequatur quam odio hic!</p>
-            </div> -->
+            <div class="think__details__info">
+                    <p class="think__details__info__title">Manual de Instrucciones</p>
+                    <p class="think__details__info__cont">En el siguiente PDF, se presenta la manera correcta del uso de este producto, los materiales que esta posee , los equipos utilizados para poder armas este muebles ademas del procedimiento que se realiza reprentado por fotos . Tambien se va a poder observar las precauciones que se deve tener para el correcto uso </p>
+                    <a href="https://drive.google.com/file/d/1gPX4kw1Ph-zxjq6SOKlzjHsYo2WIzwb3/view?usp=sharing" target="_blank">PDF- Manual de Instrucciones</a>
+		</div>   
         </div>
 
         <div class="think">
@@ -65,7 +67,7 @@
                     <p class="think__details__info__title">Manual de Instrucciones</p>
                     <p class="think__details__info__cont">En el siguiente PDF, se presenta la manera correcta del uso de este producto, los materiales que esta posee , los equipos utilizados para poder armas este muebles ademas del procedimiento que se realiza reprentado por fotos . Tambien se va a poder observar las precauciones que se deve tener para el correcto uso </p>
                     <a href="https://drive.google.com/file/d/1gPX4kw1Ph-zxjq6SOKlzjHsYo2WIzwb3/view?usp=sharing" target="_blank">PDF- Manual de Instrucciones</a>
-		</div> 
+		</div>     
             </div>
         </div>
     </div>
