--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -49,9 +49,15 @@
                 <h1>Presentacion Parte 1</h1>
             </div>
             <div class="think__details__info">
-                    <p class="think__details__info__title">Manual de Instrucciones</p>
-                    <p class="think__details__info__cont">En el siguiente PDF, se presenta la manera correcta del uso de este producto, los materiales que esta posee , los equipos utilizados para poder armas este muebles ademas del procedimiento que se realiza reprentado por fotos . Tambien se va a poder observar las precauciones que se deve tener para el correcto uso </p>
-                    <a href="https://drive.google.com/file/d/1gPX4kw1Ph-zxjq6SOKlzjHsYo2WIzwb3/view?usp=sharing" target="_blank">PDF- Manual de Instrucciones</a>
+                    <p class="think__details__info__title">Procedimiento para armar el mueble plegable</p>
+                    <p class="think__details__info__cont"> Para armas este mueble , se necesito bastantes maquinas de madera, que nos ayudaron a darle un mejor acabado y a obtener formas que deseabamos. A continucion se mencionara los pasos que se realizaron para el armado de este mueble</p>
+                            <p class="think__details__info__cont"> corr </p>
+		            <p class="think__details__info__cont"> corr </p>
+		            <p class="think__details__info__cont"> corr </p>
+		            <p class="think__details__info__cont"> corr </p>
+		            <p class="think__details__info__cont"> corr </p>
+		            <p class="think__details__info__cont"> corr </p>
+		            <p class="think__details__info__cont"> corr </p>
 		</div>   
         </div>
 
