--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -47,7 +47,15 @@
         <div class="think__title">
             <div class="think__title__text">
                 <h1>Presentacion Parte 1</h1>
+                 </div>
+    <div class="think">
+         <div class="think__img">
+              <img src="../img/parte1.jpeg" alt="">
             </div>
+            <div class="think__details">
+                <div class="think__details__icon">
+                    <i class="icon-remote-control-streamline"></i>
+                </div>
                     <div class="think__details__info">
                              <p class="think__details__info__title">Procedimiento para armar el mueble plegable</p>
                                      <p class="think__details__info__cont"> Para armas este mueble , se necesito bastantes maquinas de madera, que nos ayudaron a darle un mejor acabado y a obtener formas que deseabamos. A continucion se mencionara los pasos que se realizaron para el armado de este mueble</p>
