--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -62,6 +62,14 @@
                      <div class="think__img">
                         <img src="../img/parte1.jpeg" alt="">                                                                                             
 		</div>   
+	        <div class="think">
+                     <div class="think__img">
+                        <img src="../img/parte1.jpeg" alt="">                                                                                             
+		</div> 
+		<div class="think">
+                     <div class="think__img">
+                        <img src="../img/parte1.jpeg" alt="">                                                                                             
+		</div> 
         </div>
 
         <div class="think">
