--- a/proyecto-final/semana4.html
+++ b/proyecto-final/semana4.html
@@ -64,11 +64,15 @@
 		</div>   
 	        <div class="think">
                      <div class="think__img">
-                        <img src="../img/parte1.jpeg" alt="">                                                                                             
+                        <img src="../img/segundo.jpeg" alt="">                                                                                             
 		</div> 
 		<div class="think">
                      <div class="think__img">
-                        <img src="../img/parte1.jpeg" alt="">                                                                                             
+                        <img src="../img/penultimo.jpeg" alt="">                                                                                             
+		</div> 
+		<div class="think">
+                     <div class="think__img">
+                        <img src="../img/final.jpeg" alt="">                                                                                             
 		</div> 
         </div>
 
