--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -66,6 +66,14 @@
 	
                 </div>
 	    </div>
+	        <div class="think">
+                     <div class="think__img">
+                        <img src="../img/extranjera.jpeg" alt="">                                                                                             
+		 </div> 
+		<div class="think">
+                     <div class="think__img">
+                        <img src="../img/final .jpeg" alt="">                                                                                             
+		</div> 
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
