--- a/design-thinking/practica4.html
+++ b/design-thinking/practica4.html
@@ -22,7 +22,7 @@
 			<li><a href="../index.html">Inicio</a></li>
             <li><a href="../design.html">Design Thinking</a>
 				<ul>
-                   <li><a href="../design-thinking/practica1.html">Diseño de Pagina Web y Planteamienton del Proyecto de Desing Thinking</a></li>
+                   <li><a href="../design-thinking/practica1.html">Diseño de Pagina Web y Planteamiento del Proyecto de Desing Thinking</a></li>
                         <li><a href="../design-thinking/practica2.html">Taller de Desing Thinking</a></li>
                         <li><a href="../design-thinking/practica3.html">Empatizar</a></li>
                         <li><a href="../design-thinking/practica4.html">Definir</a></li>
@@ -49,8 +49,8 @@
                 <h1>Definir</h1>
             </div>
             <div class="think__title__content">
-                <p>At this point, now it is up to analyze and summarize the information obtained in the previous point.</p>
-                <p> After knowing the difficulties and problems of the users, the next step was taken, which consists of evaluating all the information evaluated from the previous stage.</p>
+                <p>En este punto, ahora toca analizar y resumir la información obtenida en el punto anterior.</p>
+                <p> Luego de conocer las dificultades y problemas de los usuarios se paso a realiar la siguiente etapa, que consta de seleccionar toda la informacion evaluada de la etapa anterior.</p>
 	    </div>
         </div>
             <div class="think__details">
@@ -58,11 +58,11 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Evaluation criteria</p>
-                    <p class="think__details__info__cont"> 1.- They find the root cause of the problem and generate criteria to evaluate the information and counteract it with the correct use of techniques.</p>
-                    <p class="think__details__info__cont"> 2.- They frame the problem in a direct approach.</p>
-		    <p class="think__details__info__cont"> 3.- Defines the insight of the user, client or consumer.</p>
-		    <p class="think__details__info__cont"> 4.- They publish on the website the details of the previous points</p>
+                    <p class="think__details__info__title">Criterios de Evaluacion</p>
+                    <p class="think__details__info__cont"> 1.- Encuentran la causa raíz del problema y generan criterios para evaluar la información y contrarrestarlas con el uso correcto de técnicas.</p>
+                    <p class="think__details__info__cont"> 2.- Enmarcan el problema en un enfoque directo.</p>
+		    <p class="think__details__info__cont"> 3.- Define los insight del usuario, cliente o consumidor.</p>
+		    <p class="think__details__info__cont"> 4.- Publican en la pagina web los detalles de los puntos anteriores</p>
 	
                 </div> 
             <div class="think__details">
@@ -70,8 +70,8 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">DIFFERENCE IN OUR PRODUCT</p>
-                    <p class="think__details__info__cont"> The following document shows the differences of our product that will come to the market both economically and of the same product, compared with the one we already have in the foreign market; trying to know the implementation of said product.</p>
+                    <p class="think__details__info__title">DIFERENCIA EN NUESTRO PRODUCTO</p>
+                    <p class="think__details__info__cont"> En el siguiente documento se muestra las diferencias de nuestro producto que saldra al mercado tanto economicas como del mismo producto, comparada con la que ya tenemos en el mercado del extranjero; tratando de conocer la implementación de dicho producto.</p>
                 </div>    
 	    </div>
             <div class="think__details">
@@ -79,9 +79,8 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">VISION OF THE CUSTOMER</p>
-                    <p class="think__details__info__cont">
-Knowing the needs of our client, sometimes there are situations that do not allow us to give these small consents, that is, it is very likely that the products that are sold abroad are very expensive for our currency, which means that we do not acquire those products that is why we made a comparative table to know the differences they have for the benefit of each client and according to their situation.</p>
+                    <p class="think__details__info__title">VISIÓN DEL CLIENTE</p>
+                    <p class="think__details__info__cont">Conociendo las necesidades que tiene nuestro cliente, pues aveces hay situaciones que no nos permite darnos estos pequeños consentimientos, es decir es muy probable que los productos que son vendidos en el extrajero seas muy caros para nuestra moneda, lo cual genera que no adquiramos esos productos es por eso que nosotro hicimos un cuadro comparativo para conocer las diferencias que estos poseen para beneficio de cada cliente y acorde a su situación.</p>
                  </div>
             </div>
         </div>
